--- a/lottery/lottery.css
+++ b/lottery/lottery.css
@@ -1,7 +1,7 @@
 
 @font-face {
     font-family: 'Turnaround';
-    src: url('/Turnaround_Italic.ttf');
+    src: url('../Turnaround_Italic.ttf');
 }
 
 
