--- a/css/check.css
+++ b/css/check.css
@@ -236,3 +236,35 @@ body {
 .nav-item:hover::after {
     width: 80%;
 }
+
+.content-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: space-between;
+    align-items: flex-start;
+    margin-top: 40px;
+  }
+  
+  /* Image Content */
+  .image-content {
+    flex: 1;
+    max-width: 200%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .check-image {
+    width: 100%;
+    border: 4px solid #2c3e50;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    object-fit: cover;
+  }
+  
+  /* Text Content */
+  .text-content {
+    flex: 2;
+    max-width: 55%;
+  }
