--- a/css/nicotine.css
+++ b/css/nicotine.css
@@ -371,6 +371,8 @@ body {
 
 .disclaimer-section p {
     font-size: 1em;
+    font-family: 'Poppins', sans-serif;
+
     line-height: 1.6;
     margin-bottom: 15px;
 }
