--- a/css/check.css
+++ b/css/check.css
@@ -61,13 +61,10 @@ body {
     font-size: 1.2em;
   }
   
-  .benefits-list li strong {
-     color:#333
-  }
+  
   
   body {
     padding: 0;
-    font-weight: bolder;
     background: linear-gradient(135deg, #f8f9fa, #ffe6f0);
     color: #2c3e50;
     min-height: 100vh;
@@ -192,6 +189,8 @@ body {
 /* Navigation Bar */
 .text-nav {
     display: flex;
+    font-family: 'Poppins', sans-serif;
+
     background: #2c3e50;
     width: 100%;
     height: 60px;
