--- a/css/check.css
+++ b/css/check.css
@@ -64,6 +64,7 @@ body {
   
   
   body {
+    font-family: "Poppins", sans-serif;
     padding: 0;
     background: linear-gradient(135deg, #f8f9fa, #ffe6f0);
     color: #2c3e50;
