--- a/css/ourstory.css
+++ b/css/ourstory.css
@@ -84,7 +84,7 @@
 }
 
 body {
-    font-family: "Bodoni Moda", serif;
+    font-family: "Poppins", sans-serif;
     padding: 0;
     background: linear-gradient(135deg, #f8f9fa, #ffe6f0);
     color: #2c3e50;
