--- a/css/snack.css
+++ b/css/snack.css
@@ -149,6 +149,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    margin: 0;
 }
 
 @font-face {
@@ -198,8 +199,7 @@ body {
     margin: 4px 0;
     font-size: 0.95em;
     color: #495057;
-    font-family: "Bodoni Moda", serif;
-    line-height: 1.4;
+        line-height: 1.4;
     transition: color 0.3s ease;
 }
 
